--- a/Front-End/DesktopLab1/nbproject/private/private.properties
+++ b/Front-End/DesktopLab1/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.ojdbc6.jar=C:\\Users\\casca\\Desktop\\Laboratorio-01-master\\Back-End\\Laboratorio01\\OJDBC6\\ojdbc6.jar
+file.reference.ojdbc6.jar=C:\\Users\\casca\\Documents\\GitHub\\Lab01\\Back-End\\Laboratorio01\\OJDBC6\\ojdbc6.jar
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\casca\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
